# algorithms

./: .gitignore  CMakeLists.txt  algebraic.cmake  file_tests.cmake  simple_data_structures.cmake  todo.txt
algebraic/: benchmarks.cmake  benchmarks.cpp  tests.cmake  tests.cpp
algebraic/include/: fib.hpp  gcd.hpp  pow.hpp  primes.hpp
algorithms/algebraic/: fib.hpp  gcd.h  gcd.hpp  pow.h  pow.hpp  primes.h  primes.hpp  test.cpp
algorithms/simple_data_structures/: dynamic_array.hpp
bits/: CMakeLists.txt  tests.cmake  tests.cpp
bits/include/: common.hpp  fen.hpp  king.hpp  knight.hpp  long_range_pieces.hpp
catch_tests/: algebraic.cpp
codeforces/: CMakeLists.txt  codeforces.cmake  codeforces.cpp
dynamic/: tests.cmake  tests.cpp
dynamic/include/: digits_count.hpp  free_area.hpp  islands.hpp  tree.hpp
etc/: CMakeLists.txt  range.cmake  range.cpp  tests.cmake  tests.cpp
etc/range/: average.hpp  max.hpp
file_tests/: tester.cpp
graph/: tests.cmake  tests.cpp
graph/include/: dfs.hpp  dijkstra.hpp  graph.hpp  (+4 more)
hash_table/: CMakeLists.txt  tests.cmake  tests.cpp
scripts/: benchs.py  simple_data_structures_benchs.py
simple_data_structures/: CMakeLists.txt  benchmarks.cmake  benchmarks.cpp  tests.cmake  tests.cpp
sort/: benchmark.result  benchmarks.cmake  benchmarks.cpp  tests.cmake  tests.cpp
strings/: CMakeLists.txt  benchmarks.cmake  benchmarks.cpp  tests.cmake  tests.cpp
tests/: algebraic.cpp  simple_data_structures.cpp
trees/: CMakeLists.txt  benchmarks.cmake  benchmarks.cpp  segment_tree.cmake  segment_tree.cpp  tests.cmake  tests.cpp
(+28 files in other folders)
