cmake_minimum_required(VERSION 3.15)

project(algorithms)

add_subdirectory(algebraic)
add_subdirectory(bits)
add_subdirectory(codeforces)
add_subdirectory(dynamic)
add_subdirectory(etc)
add_subdirectory(graph)
add_subdirectory(hash_table)
add_subdirectory(simple_data_structures)
add_subdirectory(sort)
add_subdirectory(trees)
